# CCBR_SnakemakeTemplate

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  main.py  mkdocs.yaml  mkdocs.yml  pyproject.toml  run
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enchancement_request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build_mkdocs.yaml  docs-mkdocs.yml  draft-release.yml  lintr.yaml  post-release.yml  test_dev.yml
.test/: README.md  lintr.config  test.config  test.manifest
assets/: slurm_header_frce.sh
config/: config.yaml
config/cluster/: biowulf.yml
docs/: index.md  license.md  requirements.txt
docs/css/: custom.css
docs/js/: custom.js
docs/overrides/: footer.html  main.html
docs/user-guide/: contributions.md  getting-started.md  output.md  preparing-files.md  run.md  test-info.md  troubleshooting.md
resources/: cluster.json  cluster_biowulf.yaml  tools_biowulf.yaml
scripts/: gather_cluster_stats.sh  run_wrapper.bash
search/: search_index.json
src/liberty/: __main__.py  util.py
src/tool_name/: __main__.py  util.py
tests/: test_cli.py
user-guide/contributions/: index.html
user-guide/getting-started/: index.html
user-guide/output/: index.html
user-guide/preparing-files/: index.html
user-guide/run/: index.html
user-guide/test-info/: index.html
user-guide/troubleshooting/: index.html
workflow/: Snakefile
workflow/rules/: dummy.smk  init.smk
